--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
             <div class="row well well-sm text-center">
             	<div class = "col-md-5 pull-right">
-                		<img src="https://pbs.twimg.com/profile_images/649678728058896384/MVRDDnIi.png" class="logo"></img>
+                		<img src="https://cloud.githubusercontent.com/assets/5483527/12799556/ff419ef2-ca94-11e5-86c2-05d781cb569a.png" class="logo"></img>
                 </div>
                 <div class="col-md-7">
                     <a href="http://frogslayer.com/"><h3>Frogslayer LLC</h3></a>
