--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
                     </ul>
                 </div>
                 <div class="col-md-3 well well-sm skill-cat">
-                    <h3>Web</h3>
+                    <h3>Front-End</h3>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
                         <li>Bootstrap</li>
+                        <li>jQuery</li>
+                        <li>Angular</li>
                         <li>AJAX</li>
                     </ul>
                 </div>
@@ -119,9 +121,9 @@
                     <h3>Frameworks</h3>
                     <ul>
                         <li>Ruby on Rails</li>
-                        <li>jQuery</li>
-                        <li>Android SDK</li>
+                        <li>ASP.NET MVC</li>
                         <li>NodeJS</li>
+                        <li>Android SDK</li>
                         <li>Agile Development</li>
                     </ul>
                 </div>
