--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3 well well-sm skill-cat">
-                    <h3>Front-End</h3>
+                    <h3>Web</h3>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
