--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
     <script src="./js/jquery.slides.min.js"></script>
     <script src="./js/scripts.js"></script>
     <script src="./js/jquery.waypoints.min.js"></script>
+    <script src="./js/parallax.min.js"></script>
 </head>
 
 <body>
+    <div class="parallax-window" data-parallax="scroll" data-image-src="1RPlUQj.png" >
+        <div class="headline text-center">
+            Elegant, Beautiful, Reliable Software
+        </div>
+    </div>
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a href="#top" class="navbar-brand">Jaiden Gerig</a>
+                <a href="#top" class="navbar-brand nav-link">Jaiden Gerig</a>
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -38,16 +44,16 @@
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
                 	<li>
-                        <a href="#skills">Skills</a>
+                        <a href="#skills" class="nav-link">Skills</a>
                     </li>
                     <li>
-                        <a href="#projects">Projects</a>
+                        <a href="#projects" class="nav-link">Projects</a>
                     </li>
                     <li>
-                        <a href="#work">Work Experience</a>
+                        <a href="#work" class="nav-link">Work Experience</a>
                     </li>
                     <li>
-                        <a href="#resume">Resume</a>
+                        <a href="#resume" class="nav-link">Resume</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -56,8 +62,8 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="page-header" id="banner">
+    <div class="container"id="top">
+        <div class="page-header">
             <div class="row">
                 <div class="col-md-9 col-centered">
                     <div class="text-center">
@@ -238,7 +244,7 @@
             </div>
             <div class="row well well-sm text-center">
             	<div class = "col-md-5 pull-right">
-                		<img src="https://cloud.githubusercontent.com/assets/5483527/12799556/ff419ef2-ca94-11e5-86c2-05d781cb569a.png" class="logo"></img>
+                		<img src="frogslayer.png" class="logo"></img>
                 </div>
                 <div class="col-md-7">
                     <a href="http://frogslayer.com/"><h3>Frogslayer LLC</h3></a>
