fixed logo issues for smaller screens

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="row well well-sm text-center">
-            	<div class = "col-md-5 pull-right">
+            	<div class = "pull-right-sm col-md-5 col-md-offset-0 col-xs-6 col-xs-offset-3">
                 		<img src="frogslayer.png" class="logo"></img>
                 </div>
                 <div class="col-md-7">
