--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <script src="../bower_components/respond/dest/respond.min.js"></script>
     <![endif]-->
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/bootswatch.js"></script>
-    <script src="./js/jquery.slides.min.js"></script>
+    <script src="./js/bootstrap.min.js" async></script>
+    <script src="./js/bootswatch.js" async></script>
+    <script src="./js/jquery.slides.min.js" async></script>
     <script src="./js/scripts.js"></script>
-    <script src="./js/jquery.waypoints.min.js"></script>
-    <script src="./js/parallax.min.js"></script>
+    <script src="./js/jquery.waypoints.min.js" async></script>
+    <script src="./js/parallax.min.js" async></script>
 </head>
 
 <body>
