--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <script src="./js/jquery.min.js"></script>
     <script src="./js/bootstrap.min.js" ></script>
     <script src="./js/bootswatch.js" ></script>
-    <script src="./js/jquery.slides.min.js" async></script>
+    <script src="./js/jquery.slides.min.js"></script>
     <script src="./js/scripts.js"></script>
-    <script src="./js/jquery.waypoints.min.js" async></script>
-    <script src="./js/parallax.min.js" async></script>
+    <script src="./js/jquery.waypoints.min.js"></script>
+    <script src="./js/parallax.min.js"></script>
 </head>
 
 <body>
