Add link from homepage to games

--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
 ---
-layout: homepage
+layout: default
 ---
+<section class="homepage">
+    <header class="homepage-header">
+        <h1 class="homepage-header__title">
+            Jaiden Gerig
+        </h1>
+    </header>
+    <section class="homepage-sub-header">
+        <a href="/games/" class="main-link">
+            <h2 class="main-link__title">Games</h2>
+        </a>
+        <a href="/" class="main-link">
+            <h2 class="main-link__title">Software Engineering</h2>
+        </a>
+    </section>
+</section>
