--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
         <a href="/games/" class="main-link">
             <h2 class="main-link__title">Games</h2>
         </a>
-        <a href="/" class="main-link">
+        <a href="/software-engineering/" class="main-link">
             <h2 class="main-link__title">Software Engineering</h2>
         </a>
     </section>
