--- a/games.html
+++ b/games.html
@@ -4,11 +4,29 @@ permalink: /games/
 title: Games
 ---
 <section class="games-page">
-    <!-- TODO: Who am I ? -->
     <!-- TODO: What Am I Good At? -->
+    <section class="about-me">
+        <h1 class="about-me__name">
+            Hi, I'm Jaiden
+        </h1>
+        <section class="headshot__container">
+            <img class="headshot__img" src="/assets/images/headshot.jpg" alt="">
+        </section>
+        <section class="about-me__social-links">
+            <a href="https://github.com/jaideng123">
+                <i class="fab fa-github-square"></i>
+            </a>
+            <a href="mailto:jaidengerig@gmail.com">
+                <i class="fas fa-envelope-square"></i>
+            </a>
+            <a href="https://twitter.com/JaidenG123">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+        </section>
+    </section>
     <header class="games-header">
         <h1 class="games-header__title">
-            Games I've Made
+            I make games like these
         </h1>
     </header>
     <section class="projects">
