--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,14 @@ layout: default
 permalink: /contact/
 title: Contact
 ---
-<form
+<section class="games-page">
+    <header class="games-header">
+        <h1 class="games-header__title">
+          Contact JELLO Games
+        </h1>
+    </header>
+  <section>
+    <form
   action="https://formspree.io/f/moqplqyb"
   method="POST"
 >
@@ -20,3 +27,6 @@ title: Contact
 
   <button type="submit">Send</button>
 </form>
+  </section>
+
+</section>
