--- a/contact.html
+++ b/contact.html
@@ -13,19 +13,20 @@ title: Contact
     <form
   action="https://formspree.io/f/moqplqyb"
   method="POST"
+          style="text-align: center;"
 >
-  <label>
-    Your email:
+  <label style="display: block;margin: 1rem;>
+    Your Email:
     <input type="text" name="_replyto">
   </label>
-  <label>
-    Your message:
+  <label style="display: block;margin: 1rem;>
+    Your Message:
     <textarea name="message"></textarea>
   </label>
 
   <!-- your other form fields go here -->
 
-  <button type="submit">Send</button>
+  <button type="submit" style="display: block;margin: 1rem;>Send</button>
 </form>
   </section>
 
