--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@ title: Contact
   method="POST"
           style="text-align: center;"
 >
-  <label style="display: block;margin: 1rem;>
+  <label style="display: block;margin: 1rem;">
     Your Email:
     <input type="text" name="_replyto">
   </label>
-  <label style="display: block;margin: 1rem;>
+  <label style="display: block;margin: 1rem;">
     Your Message:
     <textarea name="message"></textarea>
   </label>
