--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@ title: Games
             <a href="https://github.com/jaideng123">
                 <i class="fab fa-github-square"></i>
             </a>
-            <a href="mailto:jaidengerig@gmail.com">
+            <a href="/contact/">
                 <i class="fas fa-envelope-square"></i>
             </a>
             <a href="https://twitter.com/JaidenG123">
