--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@ title: Contact
 
   <!-- your other form fields go here -->
 
-  <button type="submit" style="display: block;margin: 1rem;">Send</button>
+  <button type="submit" style="margin: 1rem;">Send</button>
 </form>
   </section>
 
