--- a/software-engineering.html
+++ b/software-engineering.html
@@ -4,5 +4,5 @@ permalink: /software-engineering/
 title: Software Engineering
 ---
 <section class="software-eng-page">
-    <h1>CONSTRUCTION</h1>
+    <h1>UNDER CONSTRUCTION</h1>
 </section>
