Rebound + Masto Link

--- a/games.html
+++ b/games.html
@@ -22,6 +22,9 @@ title: Games
             <a href="https://twitter.com/JaidenG123">
                 <i class="fab fa-twitter-square"></i>
             </a>
+            <a href="https://mastodon.gamedev.place/@JaidenG123" rel="me">
+                <i class="fab fa-mastodon"></i>
+            </a>
         </section>
     </section>
     <header class="games-header">
