Added Better page for PGO

--- a/blog-directory.html
+++ b/blog-directory.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 permalink: /blog/
+title: "Blog"
 ---
 <section class="blog-directory-page">
     <section class="blog-posts">
