--- a/contact.html
+++ b/contact.html
@@ -4,30 +4,26 @@ permalink: /contact/
 title: Contact
 ---
 <section class="games-page">
-    <header class="games-header">
-        <h1 class="games-header__title">
-          Contact JELLO Games
-        </h1>
-    </header>
+  <header class="games-header">
+    <h1 class="games-header__title">
+      Contact Jaiden
+    </h1>
+  </header>
   <section>
-    <form
-  action="https://formspree.io/f/moqplqyb"
-  method="POST"
-          style="text-align: center;"
->
-  <label style="display: block;margin: 1rem;">
-    Your Email:
-    <input type="text" name="_replyto">
-  </label>
-  <label style="display: block;margin: 1rem;">
-    Your Message:
-    <textarea name="message"></textarea>
-  </label>
+    <form action="https://formspree.io/f/moqplqyb" method="POST" style="text-align: center;">
+      <label style="display: block;margin: 1rem;">
+        Your Email:
+        <input type="text" name="_replyto">
+      </label>
+      <label style="display: block;margin: 1rem;">
+        Your Message:
+        <textarea name="message"></textarea>
+      </label>
 
-  <!-- your other form fields go here -->
+      <!-- your other form fields go here -->
 
-  <button type="submit" style="margin: 1rem;">Send</button>
-</form>
+      <button type="submit" style="margin: 1rem;">Send</button>
+    </form>
   </section>
 
 </section>
