Add Highlight Reel

--- a/games.html
+++ b/games.html
@@ -10,7 +10,6 @@ gameOrder:
 - TRITIX
 ---
 <section class="games-page">
-    <!-- TODO: What Am I Good At? -->
     <section class="about-me">
         <h1 class="about-me__name">
             Hi, I'm Jaiden
@@ -37,6 +36,10 @@ gameOrder:
         <h1 class="games-header__title">
             I make games like these
         </h1>
+        <section class="video-container-header">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZHDI7aDh8XE?autoplay=1" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </header>
     <section class="projects">
         {% for gameName in page.gameOrder %}
