--- a/about.html
+++ b/about.html
@@ -21,6 +21,9 @@ title: About Me
             <a href="https://twitter.com/JaidenG123">
                 <i class="fab fa-twitter-square"></i>
             </a>
+            <a href="https://bsky.app/profile/jaideng123.bsky.social" rel="me">
+                🦋
+            </a>
             <a href="https://mastodon.gamedev.place/@JaidenG123" rel="me">
                 <i class="fab fa-mastodon"></i>
             </a>
@@ -28,7 +31,7 @@ title: About Me
     </section>
     <section class="about-me__description">
         <p>
-            I'm an engineer, designer, and independent game creator with 7 years of experience in the games & software
+            I'm an engineer, designer, and independent game creator with 8 years of experience in the games & software
             industry.
         </p>
         <p>
@@ -46,16 +49,15 @@ title: About Me
         </p>
         <p>
             Sometimes I write about projects I'm working on or cool things I've learned about on my <a
-                href="/blog/">blog</a>
+                href="/blog/">blog.</a>
         </p>
         <p>
-            In addition to working on my own games, I volunteer my time with Seattle Indies to host social events for
-            local game developers and provide
-            mentorship to others in the games industry.
+            In addition to working on my own games, I volunteer my time with <a href="https://www.seattleindies.org/">Seattle Indies</a> to host social events for
+            local game developers and provide mentorship to others starting out in the games industry.
         </p>
         <p>
             If you want to get in touch, reach out through <a href="/contact/">my contact form</a>, or hit me up on <a
-                href="https://mastodon.gamedev.place/@JaidenG123" rel="me">Mastodon</a> or <a
+                href="https://bsky.app/profile/jaideng123.bsky.social3" rel="me">Bluesky</a> or <a
                 href="https://www.linkedin.com/in/jaiden-gerig-01708180/">LinkedIn</a>
         </p>
 
