More Little Updates

--- a/games.html
+++ b/games.html
@@ -6,6 +6,7 @@ gameOrder:
 - Pokémon Go
 - ArrowBall
 - Rebound
+- duetween
 - FC Games
 - TRITIX
 ---
@@ -23,7 +24,7 @@ gameOrder:
             I make games like these
         </h1>
         <section class="video-container-header" style="margin-top: 1.5em;padding: 0;">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZHDI7aDh8XE" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SZ8DLNUCdYc" frameborder="0"
                 allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </header>
