Fixing embed images for portfolio entiries

--- a/games.html
+++ b/games.html
@@ -44,7 +44,7 @@ gameOrder:
             </a>
             <div>
                 <a href="{{game.url}}">
-                    <img class="project__preview-image" src="{{game.previewImage}}" alt="{{game.title}} Title Image" />
+                    <img class="project__preview-image" src="{{game.image}}" alt="{{game.title}} Title Image" />
                 </a>
             </div>
             <div class="project__preview-text">
@@ -68,7 +68,7 @@ gameOrder:
             </a>
             <div>
                 <a href="{{game.url}}">
-                    <img class="project__preview-image" src="{{game.previewImage}}" alt="{{game.title}} Title Image" />
+                    <img class="project__preview-image" src="{{game.image}}" alt="{{game.title}} Title Image" />
                 </a>
             </div>
             <div class="project__preview-text">
