More SEO Tweaking

--- a/blog-directory.html
+++ b/blog-directory.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 permalink: /blog/
-title: "Blog"
+title: "Jaiden's Blog"
 ---
 <section class="blog-directory-page">
     <h3 style="text-align: center;margin-bottom: 0;">This is my blog where I occasionally publish post-mortems, technical discussions, or anything else I think might be useful to others</h3>
